--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -43,7 +43,7 @@ martin@cs.mcgill.ca}
 \maketitle
 
 \begin{abstract}
-Generating and maintaining REST API documentation with usage examples can be a time consuming and expensive process for evolving APIs. Most REST API documentation tools focus on automating the documentation of the API objects, but require manual effort for capturing realistic usage examples. So, REST API developers need to know the cost vs. benefit of providing usage examples in the documentation as well as what to include in the usage examples to prioritize the documentation efforts. In this paper, we present our observations about the obstacles that REST API client developers face without usage examples in the documentation. To this regard, we have performed a controlled study with 26 experienced software engineers and found that REST API client developers face productivity problems with using correct data types, data formats, required HTTP headers and request body when documentation lacks usage examples. By following the REST API documentation guidelines from this paper, practitioners can reduce the errors, improve success rate and satisfaction of REST API client developers.
+Generating and maintaining REST API documentation with usage examples can be a time consuming and expensive process for evolving APIs. Most REST API documentation tools focus on automating the documentation of the API objects, but require manual effort for capturing realistic usage examples. So, REST API developers need to know the cost vs. benefit of providing usage examples in the documentation as well as what to include in the usage examples to prioritize the documentation efforts. To this regard, we have performed a controlled study with 26 experienced software engineers and found that REST API client developers face productivity problems with using correct data types, data formats, required HTTP headers and request body when documentation lacks usage examples. By following the REST API documentation guidelines from this paper, practitioners can reduce the errors, improve success rate and satisfaction of REST API client developers.
 
 
 \end{abstract}
