--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -455,6 +455,7 @@ Our work in this paper is based on a controlled study and shares part of the set
 In this paper, we presented a set of problems that experienced REST API client developers face while performing API tasks using API documentation that lacks usage examples. We identified that, without examples, REST API client developers have trouble using the correct data types, correct data formats, and required HTTP headers and request body. We've also presented empirical evidence that adding usage examples it is possible to reduce mistakes, improve success rate and developer satisfaction of using the API. Practitioners can follow our guidelines while documenting REST APIs to improve API usability.
 
 \section*{Acknowledgment}
+We are grateful to our participants for their valuable time on this study. We thank the University of Calgary for funding this research.
 
 \bibliographystyle{IEEEtran}
 \bibliography{IEEEabrv,refs}
