--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -49,6 +49,11 @@ Generating and maintaining REST API documentation with usage examples can be a t
 \end{abstract}
 
 
+\begin{IEEEkeywords}
+API; REST; Documentation; Usage Examples; Empirical Study; Controlled Study; Productivity;
+
+\end{IEEEkeywords}
+
 \IEEEpeerreviewmaketitle
 
 \section{Introduction}
