made all suggested editing changes

--- a/refs.bib
+++ b/refs.bib
@@ -813,7 +813,7 @@ month={Dec},},
 @ARTICLE{g_uddin,
 author={G. Uddin and M. P. Robillard},
 journal={IEEE Software},
-title={How API Documentation Fails},
+title={How {API} Documentation Fails},
 year={2015},
 volume={32},
 number={4},
